UF-11666: Add resource to fetch events without specifiying logkey
