# src/main/java/se/sundsvall/eventlog/api/EventResource.java
@@ -39,7 +39,7 @@ import se.sundsvall.eventlog.service.EventService;
 
 @RestController
 @Validated
-@RequestMapping("/{municipalityId}/{logKey}")
+@RequestMapping("/{municipalityId}")
 @Tag(name = "Events", description = "Event operations")
 public class EventResource {
 
@@ -49,7 +49,7 @@ public class EventResource {
 		this.eventService = eventService;
 	}
 
-	@PostMapping(consumes = APPLICATION_JSON_VALUE, produces = ALL_VALUE)
+	@PostMapping(path = "/{logKey}", consumes = APPLICATION_JSON_VALUE, produces = ALL_VALUE)
 	@Operation(summary = "Create log event", description = "Creates a log event under logKey", responses = {
 		@ApiResponse(responseCode = "202", description = "Successful operation", useReturnTypeSchema = true),
 		@ApiResponse(responseCode = "400", description = "Bad request", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(oneOf = {
@@ -68,7 +68,7 @@ public class EventResource {
 			.build();
 	}
 
-	@GetMapping(produces = APPLICATION_JSON_VALUE)
+	@GetMapping(path = "/{logKey}", produces = APPLICATION_JSON_VALUE)
 	@Operation(summary = "Fetch log events", description = "Fetch log events for a specific logKey, with or without filtering the result", responses = {
 		@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true),
 		@ApiResponse(responseCode = "400", description = "Bad Request", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(oneOf = {
@@ -77,7 +77,7 @@ public class EventResource {
 		@ApiResponse(responseCode = "404", description = "Not Found", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
 		@ApiResponse(responseCode = "500", description = "Internal Server error", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class)))
 	})
-	public ResponseEntity<Page<Event>> getEvents(
+	public ResponseEntity<Page<Event>> getEventsForLogKey(
 		@Parameter(name = "municipalityId", description = "Municipality id", example = "2281") @ValidMunicipalityId @PathVariable final String municipalityId,
 		@Parameter(name = "logKey", description = "Events stored under this UUID", example = "f0882f1d-06bc-47fd-b017-1d8307f5ce95") @ValidUuid @PathVariable final String logKey,
 		@Parameter(description = "Syntax description: [spring-filter](https://github.com/turkraft/springfilter#syntax)",
@@ -87,4 +87,24 @@ public class EventResource {
 
 		return ok(eventService.findEvents(municipalityId, logKey, filter, pageable));
 	}
+
+	@GetMapping(produces = APPLICATION_JSON_VALUE)
+	@Operation(summary = "Fetch log events", description = "Fetch log events, with or without filtering the result", responses = {
+		@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true),
+		@ApiResponse(responseCode = "400", description = "Bad Request", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(oneOf = {
+			Problem.class, ConstraintViolationProblem.class
+		}))),
+		@ApiResponse(responseCode = "404", description = "Not Found", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
+		@ApiResponse(responseCode = "500", description = "Internal Server error", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class)))
+	})
+	public ResponseEntity<Page<Event>> getEvents(
+		@Parameter(name = "municipalityId", description = "Municipality id", example = "2281") @ValidMunicipalityId @PathVariable final String municipalityId,
+		@Parameter(description = "Syntax description: [spring-filter](https://github.com/turkraft/springfilter#syntax)",
+			example = "metadata.key:'userId' and metadata.value:'john123'",
+			schema = @Schema(implementation = String.class)) @Nullable @Filter final Specification<EventEntity> filter,
+		@ParameterObject final Pageable pageable) {
+
+		return ok(eventService.findEvents(municipalityId, null, filter, pageable));
+	}
+
 }
